backend: fix api collisions and systematize naming scheme
